# MyHomeWorks

./: .gitignore
11_4/: 11_4.sln
11_4/11_4/: 11_4.cpp  11_4.vcxproj
12_2/: 12_2.sln
12_2/12_2/: 12_2.cpp  12_2.vcxproj
12_3/: 12_3.sln
12_3/12_3/: 12_3.cpp  12_3.vcxproj
13_1/: 13_1.sln
13_1/13_1/: 13_1.cpp  13_1.vcxproj
13_2/: 13_2.sln
13_2/13_2/: 13_2.cpp  13_2.vcxproj  13_2.vcxproj.filters
13_3/: 13_3.sln
13_3/13_3/: 13_3.cpp  13_3.vcxproj  13_3.vcxproj.filters
14_1/: 14_1.sln
14_1/14_1/: 14_1.cpp  (+1 more)
14_2/: 14_2.sln
14_3/: 14_3.sln
14_4/: 14_4.sln
14_5/: 14_5.sln
14_6/: 14_6.sln
14_7/: 14_7.sln
14_8/: 14_8.sln
15_1/: 15_1.sln
15_2/: 15_2.sln
15_3/: 15_3.sln
15_4/: 15_4.sln
16_1/: 16_1.sln
16_2/: 16_2.sln
16_3/: 16_3.sln
16_4/: 16_4.sln
16_5/: 16_5.sln
17_1/: 17_1.sln
17_2/: 17_2.sln
17_3/: 17_3.sln
18_1/: 18_1.sln
18_2/: 18_2.sln
18_3/: 18_3.sln
18_4/: 18_4.sln
19_1/: 19_1.sln  words.txt
19_2/: 19_2.sln
19_3/: 19_3.sln  text.txt
19_4/: 19_4.sln
19_5/: 19_5.sln  questions.txt
20_1/: 20_1.sln  statements.txt
20_2/: 20_2.sln  pic.txt
20_3/: 20_3.sln  basket.txt  river.txt
20_4/: 20_4.sln
21_1/: 21_1.sln
21_2/: 21_2.sln
21_3/: 21_3.sln
21_4/: 21_4.sln
22_1/: 22_1.sln
22_2/: 22_2.sln
22_3/: 22_3.sln
23_1/: 23_1.cpp  23_1.sln  23_1.vcxproj  23_1.vcxproj.filters
23_2/: 23_2.cpp  23_2.sln  23_2.vcxproj  23_2.vcxproj.filters
23_3/: 23_3.cpp  23_3.sln  23_3.vcxproj  23_3.vcxproj.filters
24_1/: 24_1.cpp  24_1.sln  24_1.vcxproj  24_1.vcxproj.filters  text.txt
24_2/: 24_2.cpp  24_2.sln  24_2.vcxproj  24_2.vcxproj.filters
24_3/: 24_3.cpp  24_3.sln  24_3.vcxproj  24_3.vcxproj.filters
25_1/: 25_1.cpp  25_1.sln  25_1.vcxproj  25_1.vcxproj.filters  Commands.h
25_1_1/: CMakeLists.txt  Commands.h  main.cpp
25_2/: 25_2.sln  25_2.vcxproj  25_2.vcxproj.filters  CommandList.h  RAM.cpp  cpu.cpp  gpu.cpp  kbd.cpp  main.cpp  save_file.txt
25_2_1/: CMakeLists.txt
26_1/: 26_1.cpp  26_1.sln  26_1.vcxproj  26_1.vcxproj.filters
26_2/: 26_2.cpp  26_2.sln  26_2.vcxproj  26_2.vcxproj.filters
26_3/: 26_3.cpp  26_3.sln  26_3.vcxproj  26_3.vcxproj.filters
27_1/: 27_1.cpp  27_1.sln  27_1.vcxproj  27_1.vcxproj.filters  main.cpp
27_2/: 27_2.cpp  27_2.sln  27_2.vcxproj  27_2.vcxproj.filters
27_3/: 27_3.cpp  27_3.sln  27_3.vcxproj  27_3.vcxproj.filters  main.cpp
28_1/: CMakeLists.txt
28_2/: CMakeLists.txt
28_3/: CMakeLists.txt
29_Animals/: 29_Animals.sln  29_Animals.vcxproj  main.cpp
30_1/: CMakeLists.txt
30_2/: CMakeLists.txt
30_3/: CMakeLists.txt
30_3_1/: CMakeLists.txt
30_3_1/src/: CMakeLists.txt  main.cpp  request.cpp  support.cpp
31_1/: CMakeLists.txt
31_2/: CMakeLists.txt
32_1/: CMakeLists.txt  main.cpp
32_2/: CMakeLists.txt
32_2/include/: Clear.h  Film.h  Wait.h
32_2/src/: Film.cpp  main.cpp  menu.cpp  test.cpp
32_3/: CMakeLists.txt  company.pb.cc  company.pb.h  company.proto
32_Film/: CMakeLists.txt  main.cpp
33_1/: CMakeLists.txt
33_1/include/: Basket.h  Market.h  Support.h
33_1/src/: basket.cpp  main.cpp  market.cpp  support.cpp
33_2/: CMakeLists.txt  main.cpp
33_3_VS/: CMakeLists.txt
33_3_VS/include/: Reestr.h  Support.h
33_3_VS/src/: main.cpp  reestr.cpp  support.cpp
33_4/: CMakeLists.txt  main.cpp
35_Tasks/: task1.cpp  task2.cpp  task3.cpp
HomeWork/: HomeWork.sln
Warships/: Warships.sln
(+769 files in other folders)
